force-app/main/default/objects/Contact_in_Delegation__c/Contact_in_Delegation__c.object-meta.xml
<CustomObject>
    <label>Contact in Delegation</label>
    <nameField>
        <label>Contact in Delegation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts in Delegation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>