force-app/main/default/objects/Contact_in_Delegation__c/fields/Delegation__c.field-meta.xml
<CustomField>
    <fullName>Delegation__c</fullName>
    <label>Delegation</label>
    <referenceTo>Delegation__c</referenceTo>
    <relationshipLabel>Contacts in Delegation</relationshipLabel>
    <relationshipName>Contacts_in_Delegation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>