force-app/main/default/objects/Contact_in_Delegation__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Photographer</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>JAFI Employee</fullName>
            </value>
            <value>
                <fullName>Keren Hayesod Employee</fullName>
            </value>
            <value>
                <fullName>JFNA Participant</fullName>
            </value>
            <value>
                <fullName>KH Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>